# AllianceDB

./: .clang-format  .gitignore  AbstractC20Thread_8h.html  AbstractC20Thread_8h__dep__incl.map  AbstractC20Thread_8h__dep__incl.md5  AbstractC20Thread_8h__incl.map  AbstractC20Thread_8h__incl.md5  AbstractC20Thread_8h_source.html  AbstractEagerWS_8h.html  AbstractEagerWS_8h__dep__incl.map  AbstractEagerWS_8h__dep__incl.md5  AbstractEagerWS_8h__incl.map  AbstractEagerWS_8h__incl.md5  AbstractEagerWS_8h_source.html  AbstractJP_8h_source.html  AbstractJoinAlgo_8h.html  AbstractJoinAlgo_8h.js  AbstractJoinAlgo_8h__dep__incl.map  AbstractJoinAlgo_8h__dep__incl.md5  AbstractJoinAlgo_8h__incl.map  AbstractJoinAlgo_8h__incl.md5  AbstractJoinAlgo_8h_source.html  AbstractJoinMethod_8h_source.html  AbstractLazyJP_8h.html  AbstractLazyJP_8h.js  AbstractLazyJP_8h__dep__incl.map  AbstractLazyJP_8h__dep__incl.md5  AbstractLazyJP_8h__incl.map  AbstractLazyJP_8h__incl.md5  AbstractLazyJP_8h_source.html  AbstractLazyWS_8h.html  AbstractLazyWS_8h__incl.map  AbstractLazyWS_8h__incl.md5  AbstractLazyWS_8h_source.html  AbstractWS_8h.html  AbstractWS_8h__dep__incl.map  AbstractWS_8h__dep__incl.md5  AbstractWS_8h__incl.map  AbstractWS_8h__incl.md5  AbstractWS_8h_source.html  (+685 more)
hashing/: .gitignore  AllianceDB.cbp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.in  FindNuma.cmake  Makefile  affinity.h  barrier.h  benchmark.cpp  benchmark.h  cmake_install.cmake  configure  cpu-mapping.txt  cpu_mapping.cpp  cpu_mapping.h  distributor.cpp  distributor.h  generator.cpp  generator.h  hash_main.cpp  hashing  main.cpp  no_partitioning_join.cpp  no_partitioning_join.h  npj_types.h  parallel_radix_join.cpp  parallel_radix_join.h  perf_counters.h  rdtsc.h  task_queue.h  types.h
hashing/helper/: atomicops.h  avxcommon.h  avxintrin_emu.h  avxsort.cpp  avxsort.h  avxsort_core.h  concurrentqueue.h  fetcher.cpp  fetcher.h  fetcher_old.cpp  launcher.cpp  launcher.h  localjoiner.cpp  localjoiner.h  pmj_helper.cpp  pmj_helper.h  readerwriterqueue.h  shuffler.cpp  shuffler.h  sort_common.cpp  sort_common.h  thread_task.cpp  thread_task.h
hashing/joins/: batcher.cpp  batcher.h  common_functions.cpp  common_functions.h  count_min_sketch.cpp  count_min_sketch.h  eagerjoin_struct.h  launcher.cpp  launcher.h  localjoiner.cpp  localjoiner.h  no_partitioning_join.cpp  no_partitioning_join.h  npj_params.h  npj_types.h  onlinejoins.cpp  onlinejoins.h  onlinejoins_st.cpp  onlinejoins_st.h  parallel_radix_join.cpp  parallel_radix_join.h  prj_params.h  shj.cpp  shj.h  shj_struct.h  thread_task.cpp  thread_task.h
hashing/lib/: client_bw.cpp  cpucounters.cpp  cpucounters.h  mmio.h  msr.h  mutex.h  pci.h  types.h  utils.cpp  utils.h  width_extender.h
hashing/multiple_thread/: parallel_radix_join.cpp  parallel_radix_join.h  prj_params.h
hashing/scripts/: .benchmark.sh.swl  .benchmark.sh.swm  .benchmark.sh.swn  .benchmark.sh.swo  .benchmark.sh.swp  .benchmark.swp  50_latency_variance_tradeoff.py  DEBS_joinsize.txt  DEBS_variance.txt  Rovio_joinsize.txt  Rovio_variance.txt  Stock_joinsize.txt  Stock_variance.txt  benchmark.sh  benchmark0.sh  benchmark_NUMA.sh  benchmark_SMP_ALL.sh  benchmark_hs.sh  benchmark_mem_prob.sh  benchmark_not_func.sh  benchmark_old.sh  benchmark_pcm.sh  benchmark_perf.sh  benchmark_rovio.sh  breakdown.py  breakdown_broken.py  breakdown_bucket.py  breakdown_group_pmj.py  breakdown_group_shj.py  breakdown_hsstudy.py  breakdown_hsstudy_hs.py  breakdown_hsstudy_jm.py  breakdown_kim.py  breakdown_merge.py  breakdown_merge_step.py  breakdown_p_np_study.py  breakdown_radix.py  breakdown_simd.py  breakdown_sort.py  breakdown_sort_step.py  (+95 more)
hashing/test/: test.cpp
hashing/timer/: clock.cpp  clock.h  rdtsc.h  t_timer.cpp  t_timer.h
hashing/utils/: barrier.h  config.h  cpu_mapping.cpp  cpu_mapping.h  generator.cpp  generator.h  genzipf.cpp  genzipf.h  lock.h  machine.h  params.h  perf_counters.cpp  perf_counters.h  rdtsc.h  skewness.h  t_timer.cpp  t_timer.h  task_queue.h  timer.cpp  timer.h  tuple_buffer.h  types.h  xxhash64.h
sorting/: .gitignore  AllianceDB.cbp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.h  main.cpp  params.h  pcm-uarch.cfg  pcm-uarch2.cfg  pcm.cfg  sorting
sorting/affinity/: affinity.h  cpu_mapping.cpp  cpu_mapping.h  memalloc.cpp  memalloc.h  numa_shuffle.h
sorting/datagen/: generator.cpp  generator.h  genzipf.cpp  genzipf.h
sorting/joins/: avx_multiwaymerge.cpp  avx_multiwaymerge.h  avxcommon.h  avxsort.cpp  avxsort.h  avxsort_core.h  avxsort_multiway.cpp  avxsort_multiway.h  common_functions.cpp  common_functions.h  joincommon.cpp  joincommon.h  merge.cpp  merge.h  partition.cpp  partition.h  scalar_multiwaymerge.cpp  scalar_multiwaymerge.h  scalarsort.cpp  scalarsort.h  sortmergejoin_mpsm.cpp  sortmergejoin_mpsm.h  sortmergejoin_multipass.cpp  sortmergejoin_multipass.h  sortmergejoin_multiway.cpp  sortmergejoin_multiway.h  sortmergejoin_multiway_skewhandling.cpp  sortmergejoin_multiway_skewhandling.h
sorting/lib/: client_bw.h  cpucounters.cpp  mmio.cpp  msr.cpp  mutex.h  pci.cpp  pci.h  utils.h  width_extender.h
sorting/scripts/: .benchmark.sh.swk  .benchmark.sh.swl  .benchmark.sh.swm  .benchmark.sh.swn  .benchmark.sh.swo  .benchmark.sh.swp  .benchmark.swo  .benchmark.swp  CMakeCache.txt  Makefile  benchmark.sh  benchmark0.sh  benchmark_NUMA.sh  benchmark_old.sh  benchmark_pcm.sh  benchmark_perf.sh  cmake_install.cmake  gap_size.py  jobdone.py  perf_uarch.sh  reservoir_size.py
sorting/test/: check_avxsort.cpp  testutil.cpp  testutil.h
sorting/timer/: rdtsc.h  t_timer.cpp  t_timer.h
sorting/util/: params.h  rdtsc.h  t_timer.cpp  t_timer.h  types.h
sorting/utils/: barrier.h  params.h  perf_counters.cpp  perf_counters.h  type_convert.h  types.h
test/: CMakeLists.txt  config_AI_INFERENCE.csv  config_IMA.csv  config_LinearSVI_INFERENCE.csv  config_Normal.csv  config_fileDataLoader.csv
test/System/: Test.cpp
test/SystemTest/: AIInferenceTest.cpp  AIPretrainTest.cpp  AbstractJoinMethod.h  IAWJSelTest.cpp  IAWJTest.cpp  IMATest.cpp  MSWJTest.cpp  (+13 more)
(+4002 files in other folders)
