cmake_minimum_required(VERSION 3.17)
project(sorting)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(affinity)
include_directories(datagen)
include_directories(joins)
include_directories(lib)
include_directories(lib/exceptions)
include_directories(test)
include_directories(timer)
include_directories(utils)

add_executable(sorting
        affinity/cpu_mapping.cpp
        affinity/cpu_mapping.h
        affinity/memalloc.cpp
        affinity/memalloc.h
        affinity/numa_shuffle.cpp
        affinity/numa_shuffle.h
        datagen/generator.cpp
        datagen/generator.h
        datagen/genzipf.cpp
        datagen/genzipf.h
        joins/avx_multiwaymerge.cpp
        joins/avx_multiwaymerge.h
        joins/avxcommon.h
        joins/avxintrin_emu.h
        joins/avxsort.cpp
        joins/avxsort.h
        joins/avxsort_core.h
        joins/avxsort_multiway.cpp
        joins/avxsort_multiway.h
        joins/common_functions.cpp
        joins/common_functions.h
        joins/merge.cpp
        joins/merge.h
        joins/partition.cpp
        joins/partition.h
        joins/scalar_multiwaymerge.cpp
        joins/scalar_multiwaymerge.h
        joins/scalarsort.cpp
        joins/scalarsort.h
        joins/sortmergejoin_mpsm.cpp
        joins/sortmergejoin_mpsm.h
        joins/sortmergejoin_multipass.cpp
        joins/sortmergejoin_multipass.h
        joins/sortmergejoin_multiway.cpp
        joins/sortmergejoin_multiway.h
        joins/sortmergejoin_multiway_skewhandling.cpp
        joins/sortmergejoin_multiway_skewhandling.h
        lib/exceptions/unsupported_processor_exception.hpp
        lib/client_bw.cpp
        lib/client_bw.h
        lib/cpucounters.cpp
        lib/cpucounters.h
        lib/mmio.cpp
        lib/mmio.h
        lib/msr.cpp
        lib/msr.h
        lib/mutex.h
        lib/pci.cpp
        lib/pci.h
        lib/types.h
        lib/utils.cpp
        lib/utils.h
        lib/width_extender.h
        test/check_avxsort.cpp
        test/testutil.cpp
        test/testutil.h
        timer/rdtsc.h
        timer/t_timer.cpp
        timer/t_timer.h
        utils/barrier.h
        utils/generic_task_queue.cpp
        utils/generic_task_queue.h
        utils/lock.h
        utils/params.h
        utils/perf_counters.cpp
        utils/perf_counters.h
        utils/tuple_buffer.h
        utils/type_convert.h
        utils/types.h
        config.h
        main.cpp)
